--- a/pages/main_game.html
+++ b/pages/main_game.html
@@ -153,6 +153,7 @@
         </style>
     </head>
     <body>
+        <audio src="../songs/old-pokemon-battle-music.mp3" allow="autoplay" id="audio" style="display:none" autoplay loop></audio>
         <div id="loading">
             <img id="loading-image" src="../images/loading.gif" class="loadimg" alt="Loading..." />
         </div>
