--- a/pages/winner.html
+++ b/pages/winner.html
@@ -49,6 +49,7 @@
     </style>
 </head>
 <body>
+    <audio src="../songs/victory.mp3" allow="autoplay" id="audio" style="display:none" autoplay loop></audio>
     <h1>Pokemon Battle - Winner</h1>
     
     <div class="winner-info">
