small screen alert on home page also

--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
         .player-select select option {
           padding: 30px;
         }
+
+        #small-screen{
+                display: none;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                color: rgb(255, 255, 255);
+                background-color: #0563af;
+                border-radius: 10px;
+                width: auto;
+                align-self: center;
+                text-align: center;
+                padding: 10px;
+                font-size: 1.5rem;
+            }
     </style>
 </head>
 <body>
@@ -106,6 +121,7 @@
             <div class="start-button" id="start">
                 <button id="start-button">Start Game</button>
             </div>
+            <p id="small-screen">This game is meant for PC screens with minimum 800px width</p>
     </div>
     
     <script src="scripts/home.js"></script>
